# IQterminal

./: .gitignore  PHASE1.md  PHASE2.md  README.md  company_tickers.json  company_tickers_exchange.json  config.default.toml  pyproject.toml  textual_plan.md
src/financial_terminal/: app.py  config.py
src/financial_terminal/data/: dao.py  db.py  models.py
src/financial_terminal/domain/: __init__.py
src/financial_terminal/services/: poller.py  sec.py  ticker_loader.py
tests/: __init__.py
