[project]
name = "financial-terminal"
version = "0.1.0"
description = "Textual-based financial filings terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=6.0,<7.0",
    "rich>=14,<15",
    "sqlalchemy>=2.0,<3.0",
    "httpx>=0.28,<0.29",
    "pydantic>=2.0,<3.0",
    "lxml>=5.0,<7.0",
]

[project.scripts]
financial-terminal = "financial_terminal.app:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
